# nnstreamer-app

./: CMakeLists.txt
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
